--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="left-nav">
       <div>
-        <a href=""><img src="./icon.png" alt=""></a>
+        <a href=""><img src="./pictures/icon.png" alt=""></a>
       </div>
     
       <div class="links">
@@ -47,22 +47,79 @@
 
 
 <div class="main">
-  <img src="./main.png" width="90%" class="main-positsiya" alt="">
+  <img src="./pictures/main.png" width="90%" class="main-positsiya" alt="">
 
-  <img src="./main-yozwvoti.png" width="80%" class="main-positsiya-2" alt="">
+  <img src="./pictures/main-yozwvoti.png" width="80%" class="main-positsiya-2" alt="">
   
-  <img src="./main-bottayam.png" width="90%" class="main-positsiya-3" alt="">
+  <img src="./pictures/main-bottayam.png" width="90%" class="main-positsiya-3" alt="">
 
 </div>
 
 
 <div class="footer">
-  <h1 class="footer-h1">Browse our <br>
-    Case Study</h1>
+  <div class="text">
+    <h1 class="footer-h1">Browse our <br>
+      Case Study</h1>
+  
+      <p class="footer-lorem-p"> Lorem ipsum dolor sit amet, consectetur adipiscing <br>
+         elit, sed do eiusmod tempor incididunt ut labore et <br>
+          dolore magna aliqua. Ut enim ad minim veniam.</p>
+  </div>
 
-    <p class="footer-lorem-p"> Lorem ipsum dolor sit amet, consectetur adipiscing <br>
-       elit, sed do eiusmod tempor incididunt ut labore et <br>
-        dolore magna aliqua. Ut enim ad minim veniam.</p>
+  <div class="div-numbers">
+
+    <div class="online-shop">
+      <br>
+      <h4 class="text-secondary">01</h4>
+
+      <h1 style="font-size: 40px; margin-left: 100px; margin-top: -50px;">Online Shop</h1>
+      <p class="text-secondary" style="margin-left: 105px; margin-top: 30px;">3 Case Studies</p>
+
+      <img src="./pictures/стрелка.png" style="margin-left: 550px; margin-top: -200px;" alt="">
+    </div>
+
+    <div class="online-shop">
+      <br>
+      <h4 class="text-secondary">02</h4>
+
+      <h1 style="font-size: 40px; margin-left: 100px; margin-top: -50px;">Portfolio Website</h1>
+      <p class="text-secondary" style="margin-left: 105px; margin-top: 30px;">3 Case Studies</p>
+
+      <img src="./pictures/стрелка.png" style="margin-left: 550px; margin-top: -200px;" alt="">
+    </div>
+
+    <div class="online-shop">
+      <br>
+      <h4 class="text-secondary">03</h4>
+
+      <h1 style="font-size: 40px; margin-left: 100px; margin-top: -50px;">Company Profile</h1>
+      <p class="text-secondary" style="margin-left: 105px; margin-top: 30px;">3 Case Studies</p>
+
+      <img src="./pictures/стрелка.png" style="margin-left: 550px; margin-top: -200px;" alt="">
+    </div>
+
+    <div class="online-shop">
+      <br>
+      <h4 class="text-secondary">04</h4>
+
+      <h1 style="font-size: 40px; margin-left: 100px; margin-top: -50px;">Online Learning</h1>
+      <p class="text-secondary" style="margin-left: 105px; margin-top: 30px;">3 Case Studies</p>
+
+      <img src="./pictures/стрелка.png" style="margin-left: 550px; margin-top: -200px;" alt="">
+    </div>
+
+    <div class="online-shop1">
+      <br>
+      <h4 class="text-secondary">05</h4>
+
+      <h1 style="font-size: 40px; margin-left: 100px; margin-top: -50px;">News Portal</h1>
+      <p class="text-secondary" style="margin-left: 105px; margin-top: 30px;">3 Case Studies</p>
+
+      <img src="./pictures/стрелка.png" style="margin-left: 550px; margin-top: -200px;" alt="">
+    </div>
+
+  </div>
+ 
 </div>
 
 </body>
